--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.1",
     "react-router-dom": "^4.3.1",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "@material-ui/core": "^4.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
